--- a/index.html
+++ b/index.html
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+
 
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <div class="container">
+    <div class="card">
+      <div class="header">
+        <img src="images/image-victor.jpg" alt="image-victor">
+      </div>
+      <div class="body">
+        <h1>Victor Crest <span class="age">26</span></h1>
+        <p class="location">London</p>
+      </div>
+      <hr>
+      <div class="footer">
+        <div class="followers">
+          <h1>80K</h1>
+          <p>Followers</p>
+        </div>
+        <div class="followers">
+          <h1>803K</h1>
+          <p>Likes</p>
+        </div>
+        <div class="followers">
+          <h1>1.4K</h1>
+          <p>Photos</p>
+        </div>
+      </div>
+    </div>
 
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
   </div>
-</body>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Prince Andrews</a>.
+    </div>
+  </footer>
+
+
 </html>
